--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 python_paths = .
-addopts = --junitxml=junit.xml --cov nlminit --cov-report term-missing --cov-report xml
+addopts = --junitxml=junit.xml --cov nlmfedcred --cov-report term-missing --cov-report xml
 testpaths = tests
