Enable building the docs as a PDF

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,8 +1,14 @@
 -r requirements.txt
 
+# utility
 ipython
-mkdocs
 awscli
+
+# documentation
+mkdocs
+mkdocs-pdf-export-plugin
+
+# running tests
 tox
 flake8
 isort
